# markdown-viewer

./: .gitignore  .lintstagedrc.json  .lintstagedrc.mjs  .npmrc  AGENTS.md  CHANGELOG.md  CONTEXT.md  README.md  electron-builder.yml  electron.vite.config.ts  eslint.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  test-binsearch.cjs  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts  vitest.config.js  vitest.config.main.js  vitest.config.main.ts  vitest.config.ts  vitest.workspace.ts
docs/: architecture.md  backlog.md  code-viewer-design.md  development.md  product.md  release-checklist.md  roadmap.md  spec-v1.md  tech-stack-architecture-review.md
e2e/: app.spec.ts  command-palette.spec.ts  editor-conflict.spec.ts  editor-preview.spec.ts  file-size-guard.spec.ts  file-tree-loading.spec.ts  file-tree.spec.ts  links.spec.ts  markdown-large-doc.spec.ts  markdown-rendering.spec.ts  outline-collapse.spec.ts  utils.ts  (+17 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  filters.rs  lib.rs  main.rs  menu.rs
src-tauri/src/commands/: directory.rs  export.rs  files.rs  launch.rs  mod.rs  reveal.rs  scope.rs  search.rs  settings.rs  store.rs  trash.rs  watcher.rs
src-tauri/src/filesystem/: mod.rs
src-tauri/src/scope/: mod.rs
src-tauri/src/search/: cancelled_store.rs  matcher.rs  mod.rs  search_session.rs  types.rs  walk.rs
src-tauri/src/state/: launch.rs  mod.rs  search.rs  settings.rs  watcher.rs
src-tauri/src/workspace/: commands.rs  mod.rs
(+252 files in other folders)
