[package]
name = "markdown-viewer"
version = "1.0.0"
description = "Markdown Viewer"
authors = ["Markdown Viewer Team"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "markdown_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["default"] }
glob = "0.3"
regex = "1"
notify = "6"
