[package]
name = "markdown-viewer"
version = "1.2.9"
description = "Markdown Viewer"
authors = ["Markdown Viewer Team"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "markdown_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1.0"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["default"] }
notify = "6"
tauri-plugin-fs = "2.5.1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-shell = "2.3.5"
trash = "3"
